fixed figcaption gap at bottom of first 1mg in div

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -42,17 +42,18 @@ h2 {
 }
 
 .img_container {
-  display: inline-flex;
   flex-wrap: wrap;
 }
 
 img {
   width: 35rem;
   height: auto;
+  display: block;
 }
 
 figure {
-  figcaption {
+  white-space:unset;
+  & figcaption {
     position: relative;
     width: 100%;
     left: 0;
